# nlp-core-rs

./: COPYING  Cargo.toml  README.md
src/: lib.rs
src/tokenizer/: core.rs  mod.rs  regex.rs  simple.rs  treebank.rs
