[package]
name = "nlp_core"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["nlp", "machine-learning", "ml"]
description = "Core NLP library for Rust"
repository = "https://github.com/tugascript/nlp-core-rs"

[lib]
name = "nlp_core"
path = "src/lib.rs"

[dependencies]
unicode-segmentation = "1.11.0"
regex = "1.10.6"
once_cell = "1.19.0"
